@@ -35,6 +35,9 @@ module type S = sig
   (* Check for a singleton *)
   val as_singleton : t -> elt option
 
+  (* union of four sets *)
+  val union4 : t -> t -> t -> t -> t
+
   (* Quite convenient: union of sets given in a list *)
   val unions : t list -> t
 
@@ -87,6 +90,8 @@ module Make(O:OrderedType) : S with type elt = O.t =
           Some r
         else None
       with Not_found -> None
+
+    let union4 s1 s2 s3 s4 = union (union s1 s2) (union s3 s4)
 
     let rec union2 k sets = match sets with
     | [] -> k
